commenting out security on the backend, fixing openapi.yaml, fixing application response,
